# progtech1

examples/week1/: hello.cpp
examples/week10/: add128.cpp  add128.ii  add64.cpp  add64.ii  intrinsic.cpp  powerpc_asm.cpp  profile.cpp  tester.cpp
examples/week11/: all-patterns.mk  config.mk  doesnt-work.mk  double.mk  false-dependencies.mk  hello.mk  multiple.mk  paper.tex  pattern-rule.mk  phony.mk  plot.py  stats.py  target-variable.mk  use-pattern.mk  wildcard.mk  with-commands-at-home.mk  with-include.mk  with-macro.mk
examples/week12/mpi/: deadlock1.cpp  deadlock2.cpp  hello1.cpp  hello2.cpp  hello3.cpp  integrate1.cpp  integrate2.cpp
examples/week12/openmp/: dot1.cpp  dot2.cpp  dot2a.cpp  dot3.cpp  hello1.cpp  hello2.cpp  sum0.cpp  sum1.cpp  sum2.cpp
examples/week2/: CMakeLists.txt  assert.cpp  functioncall.s  guard.cpp  main.cpp  min.cpp  minmacro.cpp  pre1.cpp  square.cpp  square.hpp  test.cpp
examples/week2/dll/: CMakeLists.txt  square.hpp  version.cpp.in
examples/week2/option/: CMakeLists.txt
examples/week2/shared/: CMakeLists.txt
examples/week2/static/: CMakeLists.txt
examples/week2/version/: CMakeLists.txt  main.cpp  square.cpp  square.hpp  version.cpp
examples/week3/: CMakeLists.txt  hello_date.cpp  loopadd.C  mintemplate.cpp  simpleadd.C  timed_loop.cpp
examples/week4/: CMakeLists.txt  array.hpp  statistics.cpp  statistics.hpp  statisticsmain.cpp  tstatistics.hpp  tstatisticsmain.cpp
examples/week5/: boolarray.hpp  traits_example_automatic.cpp
examples/week8/: MCIntegrators.nb  Random.nb  rng.cpp
examples/week9/: main.cpp  rng1.hpp  rng2.hpp  simpson.cpp  simpson.hpp  stack1.cpp  stack2.cpp  stack3.cpp  stack4.cpp
exercises/ex00/solutions/: CMakeLists.txt  Makefile  fibonacci_dynamic.cpp  fibonacci_matrix.cpp  fibonacci_recursive.cpp  gcd_nonrecursive.cpp  gcd_recursive.cpp  merge_sort.cpp
exercises/ex01/solutions/: epsilon.cpp  simpson.cpp
exercises/ex02/solutions/: CMakeLists.txt  array_dynamic.cpp  array_static.cpp  simpson.cpp  simpson.hpp  simpson_main.cpp
exercises/ex03/solutions/: Makefile  cache.cpp  plot.py
exercises/ex04/solutions/: CMakeLists.txt
exercises/ex04/solutions/benchmark/: CMakeLists.txt  main.cpp
exercises/ex04/solutions/epsilon/: CMakeLists.txt  epsilon.cpp
exercises/ex04/solutions/random/: CMakeLists.txt  random.cpp  random.hpp
exercises/ex04/solutions/timer/: CMakeLists.txt  timer.cpp  timer.hpp
exercises/ex05/solutions/penna/: fish.hpp
exercises/ex05/solutions/simpson/: CMakeLists.txt  main.cpp  simpson.hpp
exercises/ex06/: z2_group_skeleton.cpp
exercises/ex06/solution/penna/: CMakeLists.txt  fish-test.cpp  fish.cpp  genome-test.cpp  genome.cpp  genome.hpp
exercises/ex06/solution/simpson/: CMakeLists.txt  main.cpp  simpson.hpp
exercises/ex06/solution/z2_group/: CMakeLists.txt  z2_group.cpp
exercises/ex07/: iterator-skeleton.hpp  main.cpp
exercises/ex07/solution/containers/: CMakeLists.txt  Makefile  containers.cpp  containers_plot.p
exercises/ex07/solution/iterators/: CMakeLists.txt  IteratorConcepts.txt  array.hpp  iterator.hpp  main.cpp
exercises/ex08/solutions/monte_carlo/: CMakeLists.txt  Makefile  main.cpp  random_plot.py  run_script.sh
exercises/ex08/solutions/penna/: Makefile  fish.hpp  genome.cpp  main.cpp  plot.py  population.cpp  population.hpp  run.sh
exercises/ex08/solutions/rejection_method/: CMakeLists.txt  main.cpp  modified_normal_distribution.hpp
exercises/ex09/solutions/penna/: CMakeLists.txt  Makefile  fish.cpp  fishing_population.cpp  fishing_population.hpp  main.cpp  plot.py  population.cpp  population.hpp  run.sh
exercises/ex09/solutions/simpson/: CMakeLists.txt  simpson.cpp  simpson.hpp  simpson_main.cpp
exercises/ex09/solutions/simpson_benchmark/: CMakeLists.txt  Makefile  plot.py  simpson.cpp  simpson.hpp  simpson_benchmark.cpp  simpson_benchmark.sh  test_functions_macros.hpp
exercises/ex10/: factory_skeleton.cpp  matrix_multiplication_skeleton.cpp
exercises/ex10/solution/integrand_factory/: CMakeLists.txt  main.cpp
exercises/ex10/solution/matrix_multiplication/: CMakeLists.txt  Makefile  matrixmult.cpp  strassen.cpp
exercises/ex10/solution/unordered_vector/: CMakeLists.txt  fish.hpp  genome.hpp  penna_vector.hpp  population.hpp
exercises/ex11/simpson_convergence/: CMakeLists.txt  main.cpp  plot.py  simpson.hpp
exercises/ex11/solution/harmonic_chain/: CMakeLists.txt  Makefile  harmonic_chain.cpp
exercises/ex11/solution/makefile/: Makefile  plot.gp  simpson.cpp
exercises/ex12/: algorithmic_derivation_main.cpp  algorithmic_derivation_skeleton.hpp
exercises/ex12/solutions/combinatorial_numbers/: binomial.cpp  factorial.cpp
exercises/ex12/solutions/expression_templates/: CMakeLists.txt  algorithmic_derivation.hpp  algorithmic_derivation_bonus.hpp  main.cpp  main_bonus.cpp
exercises/ex12/solutions/parallelization/: CMakeLists.txt  main.cpp  simpson.hpp
exercises/ex13/: golf_reference.txt
exercises/ex13/solutions/golf/: golf.py
exercises/ex13/solutions/harmonic_chain/: harmonic_chain.py
exercises/ex13/solutions/modules/src/: hello.py  main.py
exercises/ex13/solutions/modules/src/include/: world.py
exercises/ex13/solutions/pypenna/: main.py  plot.py
exercises/ex13/solutions/pypenna/pypenna/: __init__.py  fish.py  fishing.py  genome.py  sim.py
